<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tabsapp.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#225A53"/>

    <TextView
        android:id="@+id/predictText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#225A53"/>

    <TextView
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/longitude"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#225A53"/>

    <TextView
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/latitude"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#225A53"/>

    <TextView
        android:id="@+id/speed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/speed"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#225A53"/>

    <TextView
        android:id="@+id/dateTime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/crash_time"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#225A53"/>

    <TextView
        android:id="@+id/coordinates"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/indicator_shot"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#225A53"/>

</LinearLayout>
